--- a/backend/custom_notebook.ipynb
+++ b/backend/custom_notebook.ipynb
@@ -10,18 +10,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Import libraries and set up environment"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -32,14 +20,8 @@
    "outputs": [],
    "source": [
     "import pystac\n",
-    "from pystac import Catalog"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Define parameters for the script"
+    "from pystac import Catalog\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -52,14 +34,10 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "catalog_url = None\n",
-    "\n",
-    "location = None\n",
-    "\n",
-    "time = None\n",
-    "\n",
-    "item_limit = None\n"
+    "catalog_url = \"https://planetarycomputer.microsoft.com/api/stac/v1\"\n",
+    "geojson = {'type': 'polygon', 'coordiantes': [1, [2, 3], [4], 5]}\n",
+    "timestamp = datetime.strptime(2023-11-09 15:40:52.935582, \"%m/%d/%Y, %H:%M:%S\")\n",
+    "item_limit = 10"
    ]
   },
   {
