implemented python STAC notebook download

--- a/backend/assets/STAC_notebook_template.ipynb
+++ b/backend/assets/STAC_notebook_template.ipynb
@@ -37,9 +37,17 @@
    },
    "outputs": [],
    "source": [
-    "import pystac\n",
-    "from pystac import Catalog\n",
-    "from datetime import datetime"
+    "from datetime import datetime, timedelta\n",
+    "import pystac_client\n",
+    "import planetary_computer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Helper Functions\n",
+    "This helper function returns the catalog from the catalog url and is used to handle Planetary computer modifier and other modifiers if needed."
    ]
   },
   {
@@ -52,11 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "'''\n",
-    "    Helper function to fetch pystac.Catalog object\n",
-    "    special case: planetary computer catalog (-> sign inplace)\n",
-    "'''\n",
-    "\n",
+    "### add functionality if necessary\n",
     "def get_catalog(catalog_url:str):\n",
     "    if \"planetarycomputer\" in catalog_url:\n",
     "        # special case -> set modifier\n",
@@ -71,10 +75,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": [
-    "### Load Catalog and search items with parameters"
+    "### PARSE ARGUMENTS FROM SCRIPT\n",
+    "\n",
+    "# api link\n",
+    "catalog_url = \"<<api_link>>\"\n",
+    "\n",
+    "# stac collection id\n",
+    "stac_collection_id = \"<<stac_collection_id>>\"\n",
+    "\n",
+    "# location (geojson polygon)\n",
+    "location_geojson = {\"coordinates\": <<coordinates>>, \"type\": \"Polygon\"}\n"
    ]
   },
   {
@@ -87,22 +106,14 @@
    },
    "outputs": [],
    "source": [
-    "# pasting parameters into python variables\n",
-    "\n",
-    "catalog_url = \"{{api_link}}\"\n",
-    "geojson = {{location}}\n",
-    "\n",
-    "timerange = []\n",
-    "time_start_str = \"{{time_start}}\"\n",
-    "if time_start_str:\n",
-    "    time_start = datetime.strptime({{time_start_str}}, \"\")\n",
-    "    timerange.append(time_start)\n",
-    "time_end_str = \"{{time_end}}\"\n",
-    "if time_end_str:\n",
-    "    time_end = datetime.strptime({{time_end_str}}, \"\")\n",
-    "    timerange.append(time_end)\n",
-    "\n",
-    "item_limit = {{item_limit}}"
+    "### PARSE TIME ARGUMENTS (OPTIONAL)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load Catalog and search items with parameters"
    ]
   },
   {
@@ -130,10 +141,9 @@
    "source": [
     "# search items in catalog\n",
     "search_items = catalog.search(\n",
-    "    max_items = item_limit, \n",
-    "    collections = collection_id, \n",
-    "    intersects = geojson, \n",
-    "    datetime = [], \n",
+    "    collections = stac_collection_id, \n",
+    "    intersects = location_geojson, \n",
+    "    datetime = time_range, \n",
     ")"
    ]
   },
@@ -158,15 +168,29 @@
     "\n",
     "# this is an example code snippet for iterating over stac items and fetching name and LINKS\n",
     "for item in search_items.items():\n",
-    "    item_dict = item.__dict__\n",
-    "    for k, v in item_dict.items():\n",
-    "        print(k)"
+    "    print(item)\n",
+    "    \n",
+    "    ### FURTHER PROCESS ITEM ASSETS HERE"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
