refactor of location filters

--- a/backend/assets/STAC_notebook_template.ipynb
+++ b/backend/assets/STAC_notebook_template.ipynb
@@ -93,7 +93,7 @@
     "stac_collection_id = \"<<stac_collection_id>>\"\n",
     "\n",
     "# location (geojson polygon)\n",
-    "location_geojson = {\"coordinates\": <<coordinates>>, \"type\": \"MultiPolygon\"}\n"
+    "location_geojson = {\"coordinates\": <<coordinates>>, \"type\": \"Polygon\"}\n"
    ]
   },
   {
